--- a/src/Component/Header.module.css
+++ b/src/Component/Header.module.css
@@ -1,12 +1,10 @@
 .maincontainer{
-  background-image: linear-gradient(to right, rgb(233, 213, 255), rgb(187, 247, 208));
   position:fixed;
   top: 0;
   left: 0;
   width:100%;
   z-index: 1000;
-  background-color: white;
-  
+  background: linear-gradient(to right, rgb(233, 213, 255), rgb(187, 247, 208));
 }
 .HeadContainer{
   max-width: 80rem;  
@@ -14,6 +12,7 @@
   margin-right: auto;
   padding-left: 1rem;   
   padding-right: 1rem; 
+  border-bottom: 1px solid black;
 }
 
 @media (min-width: 640px) {  
@@ -37,10 +36,28 @@
   align-items: center;
 }
 .logo{
-  font-size: 1.5rem;       
-  line-height: 2rem;      /* 32px */
-  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 1.6rem;
+  letter-spacing: 0.6px;
+  color: #4A148C;
+  text-align: center;
+  margin: 1rem 0;
+  background: linear-gradient(90deg, #6a11cb, #2575fc);
+  background-clip: text;
+  -webkit-background-clip: text; 
+  color: transparent;
+  -webkit-text-fill-color: transparent; 
+  transition: transform 0.3s ease, text-shadow 0.3s ease;
 }
+
+.logo:hover {
+  transform: scale(1.05);
+  text-shadow: 2px 4px 10px rgba(106, 17, 203, 0.3);
+}
+
+
+
 .navContainer{
   display: none;
   font-size: 1.25rem;      /* 20px */
@@ -49,7 +66,7 @@
    
 }
 
-@media (min-width: 768px) { /* md */
+@media (min-width: 950px) { /* md */
   .navContainer {
     display: flex;
   }
@@ -144,7 +161,7 @@
 
 /* Mobile menu button */
 
-@media (min-width: 900px) {
+@media (min-width: 950px) {
   .menu_container {
     display: none;
   }
@@ -186,7 +203,7 @@
 }
 
  
-@media (min-width: 900px) {
+@media (min-width: 950px) {
   .mobileNav {
     display: none;
   }
